packages/parser/test/tokenizer/E0005.txt
'\w'
===== err =====
anonymous:1:2: SyntaxError: E0005 - Illegal character escape sequence
1 | '\w'
  |  ~~
